--- a/workspace/projects/laboratory/src/app/navbar/navbar.component.html
+++ b/workspace/projects/laboratory/src/app/navbar/navbar.component.html
@@ -9,6 +9,7 @@
  <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
     <ul class="navbar-nav just">
      <li><a class="nav-item nav-link active" routerLink="/mainpage" >Home</a></li>
+     <li><a class="nav-item nav-link active">Admin</a></li>
     </ul>
   </div>
  </nav>
